# lib/api-spec/openapi.yaml
@@ -259,6 +259,10 @@ components:
           type: ["string", "null"]
         addressed:
           type: boolean
+        answer:
+          type: ["string", "null"]
+        answeredAt:
+          type: ["string", "null"]
         createdAt:
           type: string
       required:
@@ -268,6 +272,8 @@ components:
         - topicName
         - topicCategory
         - addressed
+        - answer
+        - answeredAt
         - createdAt
 
     QuestionUpdate:
@@ -275,6 +281,8 @@ components:
       properties:
         addressed:
           type: boolean
+        answer:
+          type: ["string", "null"]
 
     QuestionInput:
       type: object
